Fixed spacing of title

--- a/BankListWebApp/index.css
+++ b/BankListWebApp/index.css
@@ -48,7 +48,7 @@
   font-weight: bold;
   margin-bottom: 20px;
   margin-top: 40px;
-  width: 25%;
+  width: 100%;
 }
 
 .bankGrid-row {
